--- a/_modules/index.html
+++ b/_modules/index.html
@@ -65,7 +65,8 @@
            <div itemprop="articleBody">
              
   <h1>All modules for which code is available</h1>
-<ul><li><a href="karya/commons/client.html">karya.commons.client</a></li>
+<ul><li><a href="karya/clients/KaryaRestClient.html">karya.clients.KaryaRestClient</a></li>
+<li><a href="karya/commons/client.html">karya.commons.client</a></li>
 <li><a href="karya/commons/config.html">karya.commons.config</a></li>
 <li><a href="karya/commons/entities/base.html">karya.commons.entities.base</a></li>
 <li><a href="karya/commons/entities/enums.html">karya.commons.entities.enums</a></li>
@@ -78,6 +79,12 @@
 <li><a href="karya/commons/entities/models/User.html">karya.commons.entities.models.User</a></li>
 <li><a href="karya/commons/entities/requests.html">karya.commons.entities.requests</a></li>
 <li><a href="karya/commons/entities/response.html">karya.commons.entities.response</a></li>
+<li><a href="samples/make_delayed_api_call_with_failure_hook.html">samples.make_delayed_api_call_with_failure_hook</a></li>
+<li><a href="samples/make_delayed_chained_karya_call.html">samples.make_delayed_chained_karya_call</a></li>
+<li><a href="samples/make_delayed_email_request.html">samples.make_delayed_email_request</a></li>
+<li><a href="samples/make_recurring_api_call.html">samples.make_recurring_api_call</a></li>
+<li><a href="samples/make_recurring_push_to_kafka.html">samples.make_recurring_push_to_kafka</a></li>
+<li><a href="samples/make_recurring_slack_request.html">samples.make_recurring_slack_request</a></li>
 </ul>
 
            </div>
