deploy: 13b81c6b0f1a78bd53a2aa6a7f839b4944abc4d2

--- a/_modules/samples/make_delayed_email_request.html
+++ b/_modules/samples/make_delayed_email_request.html
@@ -72,14 +72,14 @@
 <span class="c1"># Add the root directory of the project to the Python path</span>
 <span class="n">sys</span><span class="o">.</span><span class="n">path</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="n">os</span><span class="o">.</span><span class="n">path</span><span class="o">.</span><span class="n">abspath</span><span class="p">(</span><span class="n">os</span><span class="o">.</span><span class="n">path</span><span class="o">.</span><span class="n">join</span><span class="p">(</span><span class="n">os</span><span class="o">.</span><span class="n">path</span><span class="o">.</span><span class="n">dirname</span><span class="p">(</span><span class="vm">__file__</span><span class="p">),</span> <span class="s2">&quot;..&quot;</span><span class="p">)))</span>
 
-<span class="kn">from</span> <span class="nn">karya.commons.config</span> <span class="kn">import</span> <span class="n">ClientConfig</span>
-<span class="kn">from</span> <span class="nn">karya.commons.entities.requests</span> <span class="kn">import</span> <span class="p">(</span>
+<span class="kn">from</span> <span class="nn">karya.clients.config</span> <span class="kn">import</span> <span class="n">ClientConfig</span>
+<span class="kn">from</span> <span class="nn">karya.clients</span> <span class="kn">import</span> <span class="n">KaryaRestClient</span>
+<span class="kn">from</span> <span class="nn">karya.clients.requests</span> <span class="kn">import</span> <span class="p">(</span>
     <span class="n">CreateUserRequest</span><span class="p">,</span>
     <span class="n">SubmitPlanRequest</span><span class="p">,</span>
 <span class="p">)</span>
-<span class="kn">from</span> <span class="nn">karya.commons.entities.models.Action</span> <span class="kn">import</span> <span class="n">EmailRequest</span>
-<span class="kn">from</span> <span class="nn">karya.commons.entities.models.Plan</span> <span class="kn">import</span> <span class="n">OneTime</span>
-<span class="kn">from</span> <span class="nn">karya.clients.KaryaRestClient</span> <span class="kn">import</span> <span class="n">KaryaRestClient</span>
+<span class="kn">from</span> <span class="nn">karya.entities.actions</span> <span class="kn">import</span> <span class="n">EmailRequest</span>
+<span class="kn">from</span> <span class="nn">karya.entities.plan_types</span> <span class="kn">import</span> <span class="n">OneTime</span>
 
 
 <div class="viewcode-block" id="main">
