--- a/_modules/index.html
+++ b/_modules/index.html
@@ -65,21 +65,16 @@
            <div itemprop="articleBody">
              
   <h1>All modules for which code is available</h1>
-<ul><li><a href="karya/clients/KaryaRestClient.html">karya.clients.KaryaRestClient</a></li>
-<li><a href="karya/commons/client.html">karya.commons.client</a></li>
-<li><a href="karya/commons/config.html">karya.commons.config</a></li>
-<li><a href="karya/commons/entities/base.html">karya.commons.entities.base</a></li>
-<li><a href="karya/commons/entities/enums.html">karya.commons.entities.enums</a></li>
-<li><a href="karya/commons/entities/models/Action.html">karya.commons.entities.models.Action</a></li>
-<li><a href="karya/commons/entities/models/ErrorLog.html">karya.commons.entities.models.ErrorLog</a></li>
-<li><a href="karya/commons/entities/models/Hook.html">karya.commons.entities.models.Hook</a></li>
-<li><a href="karya/commons/entities/models/HttpBody.html">karya.commons.entities.models.HttpBody</a></li>
-<li><a href="karya/commons/entities/models/Plan.html">karya.commons.entities.models.Plan</a></li>
-<li><a href="karya/commons/entities/models/Task.html">karya.commons.entities.models.Task</a></li>
-<li><a href="karya/commons/entities/models/User.html">karya.commons.entities.models.User</a></li>
-<li><a href="karya/commons/entities/requests.html">karya.commons.entities.requests</a></li>
-<li><a href="karya/commons/entities/response.html">karya.commons.entities.response</a></li>
-<li><a href="samples/make_delayed_api_call_with_failure_hook.html">samples.make_delayed_api_call_with_failure_hook</a></li>
+<ul><li><a href="karya/clients.html">karya.clients</a></li>
+<ul><li><a href="karya/clients/config.html">karya.clients.config</a></li>
+<li><a href="karya/clients/requests.html">karya.clients.requests</a></li>
+<li><a href="karya/clients/responses.html">karya.clients.responses</a></li>
+</ul><li><a href="karya/entities.html">karya.entities</a></li>
+<ul><li><a href="karya/entities/abstracts.html">karya.entities.abstracts</a></li>
+<li><a href="karya/entities/actions.html">karya.entities.actions</a></li>
+<li><a href="karya/entities/enums.html">karya.entities.enums</a></li>
+<li><a href="karya/entities/plan_types.html">karya.entities.plan_types</a></li>
+</ul><li><a href="samples/make_delayed_api_call_with_failure_hook.html">samples.make_delayed_api_call_with_failure_hook</a></li>
 <li><a href="samples/make_delayed_chained_karya_call.html">samples.make_delayed_chained_karya_call</a></li>
 <li><a href="samples/make_delayed_email_request.html">samples.make_delayed_email_request</a></li>
 <li><a href="samples/make_recurring_api_call.html">samples.make_recurring_api_call</a></li>
