--- a/_modules/samples/make_delayed_api_call_with_failure_hook.html
+++ b/_modules/samples/make_delayed_api_call_with_failure_hook.html
@@ -72,15 +72,16 @@
 <span class="c1"># Add the root directory of the project to the Python path</span>
 <span class="n">sys</span><span class="o">.</span><span class="n">path</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="n">os</span><span class="o">.</span><span class="n">path</span><span class="o">.</span><span class="n">abspath</span><span class="p">(</span><span class="n">os</span><span class="o">.</span><span class="n">path</span><span class="o">.</span><span class="n">join</span><span class="p">(</span><span class="n">os</span><span class="o">.</span><span class="n">path</span><span class="o">.</span><span class="n">dirname</span><span class="p">(</span><span class="vm">__file__</span><span class="p">),</span> <span class="s2">&quot;..&quot;</span><span class="p">)))</span>
 
-<span class="kn">from</span> <span class="nn">karya.commons.config</span> <span class="kn">import</span> <span class="n">ClientConfig</span>
-<span class="kn">from</span> <span class="nn">karya.commons.entities.requests</span> <span class="kn">import</span> <span class="p">(</span>
+<span class="kn">from</span> <span class="nn">karya.clients.config</span> <span class="kn">import</span> <span class="n">ClientConfig</span>
+<span class="kn">from</span> <span class="nn">karya.clients</span> <span class="kn">import</span> <span class="n">KaryaRestClient</span>
+<span class="kn">from</span> <span class="nn">karya.clients.requests</span> <span class="kn">import</span> <span class="p">(</span>
     <span class="n">CreateUserRequest</span><span class="p">,</span>
     <span class="n">SubmitPlanRequest</span><span class="p">,</span>
 <span class="p">)</span>
-<span class="kn">from</span> <span class="nn">karya.commons.entities.models.Hook</span> <span class="kn">import</span> <span class="n">Hook</span><span class="p">,</span> <span class="n">Trigger</span>
-<span class="kn">from</span> <span class="nn">karya.commons.entities.models.Action</span> <span class="kn">import</span> <span class="n">RestApiRequest</span>
-<span class="kn">from</span> <span class="nn">karya.commons.entities.models.Plan</span> <span class="kn">import</span> <span class="n">OneTime</span>
-<span class="kn">from</span> <span class="nn">karya.clients.KaryaRestClient</span> <span class="kn">import</span> <span class="n">KaryaRestClient</span>
+<span class="kn">from</span> <span class="nn">karya.entities</span> <span class="kn">import</span> <span class="n">Hook</span>
+<span class="kn">from</span> <span class="nn">karya.entities.actions</span> <span class="kn">import</span> <span class="n">RestApiRequest</span>
+<span class="kn">from</span> <span class="nn">karya.entities.plan_types</span> <span class="kn">import</span> <span class="n">OneTime</span>
+<span class="kn">from</span> <span class="nn">karya.entities.enums</span> <span class="kn">import</span> <span class="n">Trigger</span>
 
 
 <div class="viewcode-block" id="main">
@@ -105,7 +106,6 @@
     <span class="c1"># Step 1: Create a new user</span>
     <span class="n">create_user_request</span> <span class="o">=</span> <span class="n">CreateUserRequest</span><span class="p">(</span><span class="n">name</span><span class="o">=</span><span class="s2">&quot;python-client&quot;</span><span class="p">)</span>
     <span class="n">user</span> <span class="o">=</span> <span class="k">await</span> <span class="n">client</span><span class="o">.</span><span class="n">create_user</span><span class="p">(</span><span class="n">create_user_request</span><span class="p">)</span>
-    <span class="nb">print</span><span class="p">(</span><span class="n">user</span><span class="p">)</span>  <span class="c1"># Print the created user object</span>
 
     <span class="c1"># Step 2: Define a failure hook</span>
     <span class="n">failure_hook</span> <span class="o">=</span> <span class="n">Hook</span><span class="p">(</span>
