--- a/_modules/karya/entities/plan_types.html
+++ b/_modules/karya/entities/plan_types.html
@@ -84,10 +84,10 @@
 <span class="sd">    plan should end.</span>
 
 <span class="sd">    Attributes:</span>
-<span class="sd">        end_at (Optional[str]): The optional end date for the recurring plan (can be `None`).</span>
+<span class="sd">        end_at (Optional[int]): The optional end date for the recurring plan (can be `None` if want to run plan indefinitely). Specify the end date in Unix timestamp format in epoch milliseconds.</span>
 <span class="sd">    &quot;&quot;&quot;</span>
 
-    <span class="n">end_at</span><span class="p">:</span> <span class="n">Optional</span><span class="p">[</span><span class="nb">str</span><span class="p">]</span>
+    <span class="n">end_at</span><span class="p">:</span> <span class="n">Optional</span><span class="p">[</span><span class="nb">int</span><span class="p">]</span>
     <span class="nb">type</span><span class="p">:</span> <span class="nb">str</span> <span class="o">=</span> <span class="s2">&quot;karya.core.entities.PlanType.Recurring&quot;</span></div>
 
 
