deploy: 0da4a7c64fbdad09ba70d97e49f4b2b7a40c3142

--- a/genindex.html
+++ b/genindex.html
@@ -237,6 +237,8 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="index.html#karya.clients.KaryaRestClient.get_summary">get_summary() (karya.clients.KaryaRestClient method)</a>
 </li>
+      <li><a href="index.html#karya.clients.KaryaRestClient.get_user">get_user() (karya.clients.KaryaRestClient method)</a>
+</li>
       <li><a href="index.html#karya.clients.responses.GetPlanResponse">GetPlanResponse (class in karya.clients.responses)</a>
 </li>
       <li><a href="index.html#karya.clients.responses.GetSummaryResponse">GetSummaryResponse (class in karya.clients.responses)</a>
@@ -373,6 +375,10 @@
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="index.html#id15">latest_task (karya.clients.responses.GetPlanResponse attribute)</a>, <a href="index.html#karya.clients.responses.GetPlanResponse.latest_task">[1]</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="index.html#karya.clients.KaryaRestClient.list_plans">list_plans() (karya.clients.KaryaRestClient method)</a>
 </li>
   </ul></td>
 </tr></table>
