deploy: 1d385701646d492a257955f6dcba640fec650336

--- a/_modules/karya/clients/requests.html
+++ b/_modules/karya/clients/requests.html
@@ -123,15 +123,15 @@
 <span class="sd">    Represents a request to update an existing plan.</span>
 
 <span class="sd">    Attributes:</span>
-<span class="sd">        planId (str): The ID of the plan to be updated.</span>
-<span class="sd">        periodTime (Optional[str]): The new time period for the plan (optional).</span>
-<span class="sd">        maxFailureRetry (Optional[int]): The new maximum number of retries for the plan (optional).</span>
+<span class="sd">        plan_id (str): The ID of the plan to be updated.</span>
+<span class="sd">        period_time (Optional[str]): The new time period for the plan (optional).</span>
+<span class="sd">        max_failure_retry (Optional[int]): The new maximum number of retries for the plan (optional).</span>
 <span class="sd">        hooks (Optional[List[Hook]]): A new list of hooks to be executed with the plan (optional).</span>
 <span class="sd">    &quot;&quot;&quot;</span>
 
-    <span class="n">planId</span><span class="p">:</span> <span class="nb">str</span>
-    <span class="n">periodTime</span><span class="p">:</span> <span class="n">Optional</span><span class="p">[</span><span class="nb">str</span><span class="p">]</span>
-    <span class="n">maxFailureRetry</span><span class="p">:</span> <span class="n">Optional</span><span class="p">[</span><span class="nb">int</span><span class="p">]</span>
+    <span class="n">plan_id</span><span class="p">:</span> <span class="nb">str</span>
+    <span class="n">period_time</span><span class="p">:</span> <span class="n">Optional</span><span class="p">[</span><span class="nb">str</span><span class="p">]</span>
+    <span class="n">max_failure_retry</span><span class="p">:</span> <span class="n">Optional</span><span class="p">[</span><span class="nb">int</span><span class="p">]</span>
     <span class="n">hooks</span><span class="p">:</span> <span class="n">Optional</span><span class="p">[</span><span class="n">List</span><span class="p">[</span><span class="n">Hook</span><span class="p">]]</span></div>
 
 </pre></div>
