--- a/genindex.html
+++ b/genindex.html
@@ -403,12 +403,12 @@
       <li><a href="index.html#id7">max_failure_retry (karya.clients.requests.SubmitPlanRequest attribute)</a>, <a href="index.html#karya.clients.requests.SubmitPlanRequest.max_failure_retry">[1]</a>
 
       <ul>
+        <li><a href="index.html#id12">(karya.clients.requests.UpdatePlanRequest attribute)</a>, <a href="index.html#karya.clients.requests.UpdatePlanRequest.max_failure_retry">[1]</a>
+</li>
         <li><a href="index.html#id33">(karya.entities.Plan attribute)</a>, <a href="index.html#karya.entities.Plan.max_failure_retry">[1]</a>
 </li>
       </ul></li>
       <li><a href="index.html#id26">max_retry (karya.entities.Hook attribute)</a>, <a href="index.html#karya.entities.Hook.max_retry">[1]</a>
-</li>
-      <li><a href="index.html#id12">maxFailureRetry (karya.clients.requests.UpdatePlanRequest attribute)</a>, <a href="index.html#karya.clients.requests.UpdatePlanRequest.maxFailureRetry">[1]</a>
 </li>
       <li><a href="index.html#id51">message (karya.entities.actions.EmailRequest attribute)</a>, <a href="index.html#karya.entities.actions.EmailRequest.message">[1]</a>
 
@@ -504,11 +504,11 @@
       <li><a href="index.html#id8">period_time (karya.clients.requests.SubmitPlanRequest attribute)</a>, <a href="index.html#karya.clients.requests.SubmitPlanRequest.period_time">[1]</a>
 
       <ul>
+        <li><a href="index.html#id13">(karya.clients.requests.UpdatePlanRequest attribute)</a>, <a href="index.html#karya.clients.requests.UpdatePlanRequest.period_time">[1]</a>
+</li>
         <li><a href="index.html#id35">(karya.entities.Plan attribute)</a>, <a href="index.html#karya.entities.Plan.period_time">[1]</a>
 </li>
       </ul></li>
-      <li><a href="index.html#id13">periodTime (karya.clients.requests.UpdatePlanRequest attribute)</a>, <a href="index.html#karya.clients.requests.UpdatePlanRequest.periodTime">[1]</a>
-</li>
       <li><a href="index.html#karya.entities.Plan">Plan (class in karya.entities)</a>
 </li>
       <li><a href="index.html#id16">plan (karya.clients.responses.GetPlanResponse attribute)</a>, <a href="index.html#karya.clients.responses.GetPlanResponse.plan">[1]</a>
@@ -517,17 +517,17 @@
         <li><a href="index.html#id18">(karya.clients.responses.GetSummaryResponse attribute)</a>, <a href="index.html#karya.clients.responses.GetSummaryResponse.plan">[1]</a>
 </li>
       </ul></li>
-      <li><a href="index.html#id22">plan_id (karya.entities.ErrorLog attribute)</a>, <a href="index.html#karya.entities.ErrorLog.plan_id">[1]</a>
+      <li><a href="index.html#id14">plan_id (karya.clients.requests.UpdatePlanRequest attribute)</a>, <a href="index.html#karya.clients.requests.UpdatePlanRequest.plan_id">[1]</a>
 
       <ul>
+        <li><a href="index.html#id22">(karya.entities.ErrorLog attribute)</a>, <a href="index.html#karya.entities.ErrorLog.plan_id">[1]</a>
+</li>
         <li><a href="index.html#id45">(karya.entities.Task attribute)</a>, <a href="index.html#karya.entities.Task.plan_id">[1]</a>
 </li>
       </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="index.html#id9">plan_type (karya.clients.requests.SubmitPlanRequest attribute)</a>, <a href="index.html#karya.clients.requests.SubmitPlanRequest.plan_type">[1]</a>
-</li>
-      <li><a href="index.html#id14">planId (karya.clients.requests.UpdatePlanRequest attribute)</a>, <a href="index.html#karya.clients.requests.UpdatePlanRequest.planId">[1]</a>
 </li>
       <li><a href="index.html#karya.entities.enums.PlanStatus">PlanStatus (class in karya.entities.enums)</a>
 </li>
