--- a/_modules/karya/clients.html
+++ b/_modules/karya/clients.html
@@ -258,12 +258,13 @@
 
 <div class="viewcode-block" id="KaryaRestClient.list_plans">
 <a class="viewcode-back" href="../../index.html#karya.clients.KaryaRestClient.list_plans">[docs]</a>
-    <span class="k">async</span> <span class="k">def</span> <span class="nf">list_plans</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">user_id</span><span class="p">:</span> <span class="nb">str</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">list</span><span class="p">[</span><span class="n">Plan</span><span class="p">]:</span>
+    <span class="k">async</span> <span class="k">def</span> <span class="nf">list_plans</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">user_id</span><span class="p">:</span> <span class="nb">str</span><span class="p">,</span> <span class="n">page</span><span class="p">:</span> <span class="nb">int</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">list</span><span class="p">[</span><span class="n">Plan</span><span class="p">]:</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        Retrieves a list of plans for a specific user by username.</span>
 
 <span class="sd">        Args:</span>
 <span class="sd">            username (str): The username of the user for which to retrieve plans.</span>
+<span class="sd">            page (int): The page number to retrieve (default is 0).</span>
 
 <span class="sd">        Returns:</span>
 <span class="sd">            list[Plan]: A list of Plan objects containing the details of the user&#39;s plans.</span>
@@ -272,7 +273,7 @@
 <span class="sd">            httpx.HTTPStatusError: If the request fails with a non-2xx status code.</span>
 <span class="sd">        &quot;&quot;&quot;</span>
         <span class="n">url</span> <span class="o">=</span> <span class="sa">f</span><span class="s2">&quot;</span><span class="si">{</span><span class="bp">self</span><span class="o">.</span><span class="n">base_url</span><span class="si">}</span><span class="s2">/</span><span class="si">{</span><span class="bp">self</span><span class="o">.</span><span class="n">_plans_endpoint</span><span class="si">}</span><span class="s2">&quot;</span>
-        <span class="n">params</span> <span class="o">=</span> <span class="p">{</span><span class="s2">&quot;user_id&quot;</span><span class="p">:</span> <span class="n">user_id</span><span class="p">}</span>
+        <span class="n">params</span> <span class="o">=</span> <span class="p">{</span><span class="s2">&quot;user_id&quot;</span><span class="p">:</span> <span class="n">user_id</span><span class="p">,</span> <span class="s2">&quot;page&quot;</span><span class="p">:</span> <span class="n">page</span><span class="p">}</span>
         <span class="n">response</span> <span class="o">=</span> <span class="k">await</span> <span class="bp">self</span><span class="o">.</span><span class="n">client</span><span class="o">.</span><span class="n">get</span><span class="p">(</span><span class="n">url</span><span class="o">=</span><span class="n">url</span><span class="p">,</span> <span class="n">params</span><span class="o">=</span><span class="n">params</span><span class="p">)</span>
         <span class="n">response</span><span class="o">.</span><span class="n">raise_for_status</span><span class="p">()</span>
         <span class="k">return</span> <span class="p">[</span><span class="n">Plan</span><span class="p">(</span><span class="o">**</span><span class="n">plan</span><span class="p">)</span> <span class="k">for</span> <span class="n">plan</span> <span class="ow">in</span> <span class="n">response</span><span class="o">.</span><span class="n">json</span><span class="p">()]</span></div>
