--- a/_modules/karya/clients.html
+++ b/_modules/karya/clients.html
@@ -268,7 +268,7 @@
 <span class="sd">            page (int): The page number to retrieve (default is 0).</span>
 
 <span class="sd">        Returns:</span>
-<span class="sd">            list[Plan]: A list of Plan objects containing the details of the user&#39;s plans.</span>
+<span class="sd">            ListPlanResponse: A resopnse object containing the list of plans.</span>
 
 <span class="sd">        Raises:</span>
 <span class="sd">            httpx.HTTPStatusError: If the request fails with a non-2xx status code.</span>
@@ -277,7 +277,7 @@
         <span class="n">params</span> <span class="o">=</span> <span class="p">{</span><span class="s2">&quot;user_id&quot;</span><span class="p">:</span> <span class="n">user_id</span><span class="p">,</span> <span class="s2">&quot;page&quot;</span><span class="p">:</span> <span class="n">page</span><span class="p">}</span>
         <span class="n">response</span> <span class="o">=</span> <span class="k">await</span> <span class="bp">self</span><span class="o">.</span><span class="n">client</span><span class="o">.</span><span class="n">get</span><span class="p">(</span><span class="n">url</span><span class="o">=</span><span class="n">url</span><span class="p">,</span> <span class="n">params</span><span class="o">=</span><span class="n">params</span><span class="p">)</span>
         <span class="n">response</span><span class="o">.</span><span class="n">raise_for_status</span><span class="p">()</span>
-        <span class="k">return</span> <span class="p">[</span><span class="n">Plan</span><span class="p">(</span><span class="o">**</span><span class="n">plan</span><span class="p">)</span> <span class="k">for</span> <span class="n">plan</span> <span class="ow">in</span> <span class="n">response</span><span class="o">.</span><span class="n">json</span><span class="p">()]</span></div>
+        <span class="k">return</span> <span class="n">ListPlanResponse</span><span class="p">(</span><span class="o">**</span><span class="n">response</span><span class="o">.</span><span class="n">json</span><span class="p">())</span></div>
 
 
 <div class="viewcode-block" id="KaryaRestClient.close">
